# stream-tests

stream_client/: Cargo.toml
stream_client/src/: main.rs
stream_server/: Cargo.toml
stream_server/src/: main.rs
