[package]
name = "stream_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = "0.3.21"
reqwest = { version = "0.11.11", features=["stream"] }
rodio = "0.15.0"
tokio = { version = "1.20.0", features=["macros", "rt-multi-thread"] }
